--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,14 @@
 		<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		
-		
-		
+		<dependency> <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-starter-logging</artifactId> </dependency> 
+		 <dependency> <groupId>org.slf4j</groupId>
+		  <artifactId>slf4j-api</artifactId> 
+		  </dependency>
+			 <dependency> <groupId>ch.qos.logback</groupId> 
+			 <artifactId>logback-classic</artifactId>
+		</dependency>
 		
 	</dependencies>
 
